# finetuning-course

./: .gitignore  main.py  pyproject.toml  requirements.txt
course/: chapter02.ipynb  chpater01.ipynb
