[project]
name = "fintuing-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "sentence-transformers[train]>=4.1.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers[torch]>=4.51.3",
]
